--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,7 +1,15 @@
-weiss
-scripts/
-weiss_master
-weiss_patch
+# Build
 *.p
 weiss_basic_
+weiss
+
+# Engine copies
+weiss_master
+weiss_patch
+
+# Edit
 run.sh
+comands.sh
+
+# TODO Remove eventually
+scripts/
