Compile with DEV

--- a/src/Makefile
+++ b/src/Makefile
@@ -117,7 +117,7 @@ SCRIPT_SRC_ALL := $(SCRIPT_SRC) $(SCRIPT_SRC_DIR)
 SCRIPT_OBJ_ALL := $(SCRIPT_OBJ) $(SCRIPT_OBJ_DIR)
 SCRIPT_OBJ_ALL_2 := ${SCRIPT_OBJ_ALL:.o=.p} # .p to avoid name collision
 
-SCRIPT_FLAGS := $(CFLAGS) -MMD -MP
+SCRIPT_FLAGS := $(CFLAGS) -MMD -MP -DDEV
 SCRIPT_OUT := weiss
 SCRIPT_OUT_BASIC := weiss_basic_
 
